# ScatterBrain

./: .flake8  .gitignore  ANALYSIS_AND_REFACTOR_PLAN.md  CLAUDE.md  Design_document.md  LICENSE  PHASE0_PLAN.md  PHASE1_PLAN.md  PHASE2_PLAN.md  PHASE3_PLAN.md  PHASE4_PLAN.md  PHASE5_PLAN.md  README.md  phase0.md  plan.md  pyproject.toml
.claude/hooks/: session-start.sh
.github/workflows/: ci.yml
docs/: README.md
docs/source/: changelog.rst  conf.py  index.rst  installation.rst  quickstart.rst
docs/source/api/: analysis.rst  core.rst  index.rst  io.rst  modeling.rst  processing.rst  utils.rst  visualization.rst
docs/source/tutorials/: 01_basic_workflow.rst  02_form_factor_fitting.rst  index.rst
examples/: basic_usage.py
notebooks/: 01_basic_workflow.ipynb  02_form_factor_fitting.ipynb
scatterbrain/: __init__.py  core.py  io.py  utils.py  visualization.py
scatterbrain/analysis/: __init__.py  guinier.py  invariant.py  porod.py
scatterbrain/data/: __init__.py
scatterbrain/examples/: basic_workflow_example.py
scatterbrain/modeling/: __init__.py  fitting.py  form_factors.py
scatterbrain/processing/: __init__.py  background.py
scatterbrain/reduction/: __init__.py
scatterbrain/utils/: __init__.py
scatterbrain/visualization/: __init__.py
src/scatterbrain/: __init__.py
tests/: __init__.py  conftest.py  test_analysis.py  test_basic.py  test_core.py  test_io.py  test_logging.py  test_modeling.py  test_processing.py  test_utils.py  test_visualization.py
tests/fixtures/: __init__.py
tests/test_data/: header_and_mixed_delimiter.txt  simple_2col_comma.csv
